pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl2.mof
/* Comma missing in Flavor */
Qualifier Abstract : boolean = false, 
    Scope(class, association, indication), 
    Flavor(EnableOverride Restricted);
